trunk/Archive2/1c/487cf5883b6cc7/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <cmath> 
   ^
main.cpp:10:31: warning: multi-character character constant [-Wmultichar]
     std:: cout  << result <<  ' \n ' ; 
                               ^
main.cpp: In function 'int main()':
main.cpp:8:21: error: 'log' is not a member of 'std'
     double result = std :: log ( arg )  / std :: log ( base ) ; 
                     ^
main.cpp:8:43: error: 'log' is not a member of 'std'
     double result = std :: log ( arg )  / std :: log ( base ) ; 
                                           ^
